# libmarshal

./: CMakeLists.txt
cmake/: FindOpenCL.cmake
include/: cl.hpp  cl_marshal.h  cl_profile.h  marshal.h  plan.hpp
src/: CMakeLists.txt  cl_marshal.cc  marshal.cu  marshal_kernel.cu
src/cl/: cl_aos_asta.cl
src/py/: transpose.py  transpose_unittest.py
test/: CMakeLists.txt  cl_unittest.cc  heuristic.cc  heuristic33.cc  marshal.cu  marshal_kernel.cu  unittest.cc  unittest.cu
