CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (libmarshal)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
FIND_PACKAGE(CUDA)
#FIND_PACKAGE(OpenCL)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
#MESSAGE(${CMAKE_PROJECT_NAME} include directories: \n)
#get_directory_property(includes INCLUDE_DIRECTORIES)
#message("${includes}\n")

ADD_SUBDIRECTORY(gtest)
ADD_SUBDIRECTORY(test)
ENABLE_TESTING()
